[gd_scene load_steps=4 format=3 uid="uid://bn6rhknremd37"]

[ext_resource type="Script" path="res://scripts/about.gd" id="1_a1qun"]
[ext_resource type="PackedScene" uid="uid://cjtnk6koaen4" path="res://scenes/background.tscn" id="1_bp7mj"]
[ext_resource type="FontFile" uid="uid://cuenpklc2fnjr" path="res://art/fonts/LazyFox Pixel Font 1.ttf" id="2_202hf"]

[node name="About" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a1qun")

[node name="Background" parent="." instance=ExtResource("1_bp7mj")]
modulate = Color(0.374139, 0.374139, 0.374139, 1)

[node name="MadeBy" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 34.0
offset_right = 460.0
offset_bottom = 79.0
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_202hf")
theme_override_font_sizes/font_size = 32
text = "Game made by: helpmeagain"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 110.0
offset_right = 557.0
offset_bottom = 587.0
scale = Vector2(0.734667, 0.762311)

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_202hf")
theme_override_font_sizes/font_size = 30
text = "Cat sprite by: ikoiku
Enemy 1 sprite by: chiecola
Enemy 2 sprite by: chiecola
Enemy 3 sprite by: eduardscarpato
Enemy 4 sprite by: lizcheong
Font by: lazy-fox
Power up icon by: leo-red
Background TileMap by: cainos
Rain Shader by: steampunkdemon
Rain SFX by: Liecio
Hit SFX by: jdwasabi

"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 489.0
offset_right = 381.0
offset_bottom = 528.0
scale = Vector2(1.24, 1.19231)

[node name="GitHubButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_202hf")
theme_override_font_sizes/font_size = 25
text = "GitHub Profile"

[node name="DocumentationButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_202hf")
theme_override_font_sizes/font_size = 25
text = "Documentation"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 189.0
offset_top = 640.0
offset_right = 305.0
offset_bottom = 685.0
theme_override_fonts/font = ExtResource("2_202hf")
theme_override_font_sizes/font_size = 30
text = "Go back"

[connection signal="pressed" from="HBoxContainer/GitHubButton" to="." method="_on_git_hub_button_pressed"]
[connection signal="pressed" from="HBoxContainer/DocumentationButton" to="." method="_on_documentation_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
